testdata/baselines/reference/submodule/conformance/checkJsdocSatisfiesTag14.errors.txt
/a.js(10,27): error TS8037: Type satisfaction expressions can only be used in TypeScript files.


==== /a.js (1 errors) ====
    /**
     * @typedef {Object} T1
     * @property {number} a
     */
    
    /**
     * @satisfies T1
     */
    const t1 = { a: 1 };
    const t2 = /** @satisfies T1 */ ({ a: 1 });
                              ~~
!!! error TS8037: Type satisfaction expressions can only be used in TypeScript files.
    